--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-.DS_Store
+# Ignore everything
+*
+
+# But not Python files
+!*.py
+
+# But not folders (to allow Python files inside folders)
+!*/
+
+# Optional: Keep your current ignores (in case you want to be extra explicit)
 .DS_Store
 __import_files__/*.csv
 *.csv
